# luacifer

./: .gitignore  Cargo.toml  LICENSE  README.md  example-config.lua  plan.md
.pi-lens/: metrics-history.json  turn-state.json
.pi-lens/cache/: jscpd.meta.json  knip.meta.json  rust-rules-v1.json  session-start-guidance.meta.json  test-runner-findings.meta.json  todo-baseline.meta.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json  typescript-rules-v1.json
examples/: clump.lua  config.lua  freeform-move.lua  nested-debug.lua  rules.lua  snap-grid.lua  tiling.lua  tty-baseline.lua
examples/lib/: common.lua
src/: headless.rs  lib.rs  main.rs  output_management_protocol.rs
src/canvas/: geometry.rs  mod.rs  momentum.rs  viewport.rs
src/compositor/: event_loop.rs  headless.rs  hooks.rs  input.rs  ipc.rs  mod.rs  output_runtime.rs  protocols.rs  rendering.rs  tests.rs  udev.rs  window_management.rs  xwayland.rs
src/input/: actions.rs  bindings.rs  mod.rs
src/ipc/: messages.rs  mod.rs
src/lua/: api.rs  config.rs  hook_support.rs  live.rs  live_api.rs  mod.rs  runtime.rs  session.rs
src/output/: layout.rs  mod.rs  state.rs
src/probe/: layer_panel.rs  mod.rs  wayland_helpers.rs  x11_window.rs  xdg_window.rs
src/probe/transfer/: clipboard.rs  common.rs  dnd.rs  mod.rs  primary.rs
src/window/: focus.rs  mod.rs  model.rs  move_resize.rs  placement.rs  rules.rs
